# Gender-Recognition-by-Voice

./: pyproject.toml  steps.txt
src/: app.py  pyproject.toml  requirements.txt
