[tool.poetry]
name = "gender-recognition-by-voice"
version = "0.1.0"
description = ""
authors = ["Mehmet Alp Bozkurt <alpbozkurt78@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.22.0"
librosa = "0.8.1"
pandas = "1.5.0"
xgboost = "2.0.3"
matplotlib = "3.6.1"
flask = "2.2.2"
scikit-learn = "1.1.3"
#scikit-learn = "0.24.2"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
