[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Alp Bozkurt <alpbozkurt78@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.22.0"
librosa = "0.8.1"
pandas = "1.5.0"
xgboost = "1.7.0"
matplotlib = "3.6.1"
flask = "2.2.2"
scikit-learn = "1.1.3"
werkzeug = "2.2.2"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
